--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 // Make one letter a link with bigger size
                 if (i === randomLinkIndex) {
                     letterElement.classList.add('link');
-                    letterElement.innerHTML = `<a href="https://supercoder21.github.io/i/" target="_blank">${letters[0]}</a>`;
+                    letterElement.innerHTML = `<a href="https://supercoder21.github.io/e/" target="_blank">${letters[0]}</a>`;
                 }
 
                 letterGrid.appendChild(letterElement);
